<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context=".TodayWeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/weather_panel"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_city_name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/weather_in_london_gb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_weather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/txt_temperature"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="14 C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_description"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/weather_in_london_gb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_date_time"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/weather_in_london_gb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableLayout
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Speed: 1 Deg: 1" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/txt_pressure"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1013.75 hpa" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100%" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise" />

                <TextView
                    android:id="@+id/txt_sunrise"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset" />

                <TextView
                    android:id="@+id/txt_sunset"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18:00" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Geo CoOrd" />

                <TextView
                    android:id="@+id/txt_geo_coord"
                    android:layout_column="1"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/cell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[45.6, 89.5]" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>